Remove a workaround for a Chrome bug (now fixed) that breaks the scrollbar in OS X Safari. (cherry picked from commit c5a337b)

--- a/demos/mvc/content/shared/styles/examples.css
+++ b/demos/mvc/content/shared/styles/examples.css
@@ -1389,11 +1389,6 @@ p#copy
     line-height:30px;
 }
 
-#example .k-grid-content table
-{
-    -webkit-backface-visibility: hidden;
-}
-
 #qrWrap
 {
     margin-right:14px;
